[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
yt-dlp = "^2024.8.6"
uvicorn = "^0.30.6"
requests-html = "^0.10.0"
lxml = {extras = ["html-clean"], version = "^5.3.0"}
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
